--- a/ShareExtension/Info.plist
+++ b/ShareExtension/Info.plist
@@ -14,6 +14,7 @@
         $extensionItem.attachments,
         $attachment,
         ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.file-url"
+        OR ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
         AND NOT (ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.folder")
     ).@count == $extensionItem.attachments.@count
 ).@count &gt; 0</string>
